Add node version to package.json.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.1.0",
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "node": "14.16.1"
   }
 }
