--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "pg": "^8.0.3",
     "sequelize": "^5.21.7",
     "sequelize-cli": "^5.5.1",
-    "uuid": "^8.0.0",
-    "node":"14.16.1"
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.1.0",
     "nodemon": "^2.0.3"
+  },
+  "engines": {
+    "node": "14.16.1"
   }
 }
