--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "per-env": "^1.0.2",
     "pg": "^8.0.3",
