--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "http-proxy-middleware": "^1.0.6",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
+    "react-datetime-picker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
