--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "http-errors": "~1.6.3",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "node-fetch": "^2.6.1",
     "per-env": "^1.0.2",
