--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^5.0.2",
     "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.0.6",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.13.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-datetime-picker": "^3.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.2",
