--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,8 @@
     "react-bootstrap-table-next": "^4.0.3",
     "react-datetime-picker": "^3.3.0",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "react-scripts": "3.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
